Switch from Vector to ArrayList and new Integer to Integer.valueOf